--- a/ace-center/pom.xml
+++ b/ace-center/pom.xml
@@ -19,10 +19,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-eureka-server</artifactId>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <build>
         <finalName>ace-center</finalName>
