--- a/ace-center/src/main/docker/Dockerfile
+++ b/ace-center/src/main/docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM livingobjects/jre8
+FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-ADD ace-center.jar app.jar
-RUN bash -c 'touch /app.jar'
+ARG JAR_FILE
+ADD ${JAR_FILE} app.jar
+#RUN bash -c 'touch /app.jar'
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
