--- a/ace-auth/ace-auth-server/src/main/resources/application.yml
+++ b/ace-auth/ace-auth-server/src/main/resources/application.yml
@@ -1,24 +1,27 @@
 spring:
-    application:
-        name: ace-auth
-    jackson:
-        date-format: yyyy-MM-dd HH:mm:ss
-        time-zone: GMT+8
-        default-property-inclusion: non_null
-    redis:
-        database: 1
-        host: ${REDIS_HOST:localhost}
-        port: ${REDIS_PORT:6379}
-        pool:
+  application:
+    name: ace-auth
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+    default-property-inclusion: non_null
+  redis:
+    database: 1
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
+    jedis:
+      pool:
         max-active: 20
-    datasource:
-      name: test
-      url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ag_auth_v1?useUnicode=true&characterEncoding=UTF8
-      username: root
-      password: 123456
-      # 使用druid数据源
-      type: com.alibaba.druid.pool.DruidDataSource
-      driver-class-name: com.mysql.jdbc.Driver
+        max-idle: 8
+  datasource:
+    name: test
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ag_auth_v1?useSSL=false&useUnicode=true&characterEncoding=UTF8
+    username: root
+    password: 123456
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    druid:
       filters: stat
       maxActive: 20
       initialSize: 1
@@ -32,24 +35,23 @@ spring:
       testOnReturn: false
       poolPreparedStatements: true
       maxOpenPreparedStatements: 20
-    rabbitmq:
-      host: ${RABBIT_MQ_HOST:localhost}
-      port:  ${RABBIT_MQ_PORT:5672}
-      username: guest
-      password: guest
-    sleuth:
-      enabled: true
-      http:
-        legacy:
-          enabled: true
+  rabbitmq:
+    host: ${RABBIT_MQ_HOST:localhost}
+    port:  ${RABBIT_MQ_PORT:5672}
+    username: guest
+    password: guest
+  sleuth:
+    enabled: true
+    http:
+      legacy:
+        enabled: true
 
 mybatis:
-    basepackage: com.github.wxiaoqi.security.auth.mapper
-    xmlLocation: classpath:mapper/**/*.xml
-    mapper-locations: "classpath*:mapper/*.xml"
+  mapper-locations: "classpath*:mapper/*.xml"
+  base-packages: com.github.wxiaoqi.security.auth.mapper
 
 server:
-    port: 9777 #启动端口
+  port: 9777 #启动端口
 
 feign:
   httpclient:
@@ -78,22 +80,16 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 10000
-
 eureka:
-    instance:
-        statusPageUrlPath: /actuator/info
-        healthCheckUrlPath: /actuator/health
-        # docker 部署开启
-        prefer-ip-address: true
-        ip-address: 127.0.0.1
-    client:
-        serviceUrl:
-#            defaultZone: http://localhost:8761/eureka/
-                    # docker 部署开启
-            defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka/
-
-
-
+  instance:
+    statusPageUrlPath: /actuator/info
+    healthCheckUrlPath: /actuator/health
+    # docker 部署开启
+    prefer-ip-address: true
+    ip-address: 127.0.0.1
+  client:
+    serviceUrl:
+      defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka/
 jwt:
   token-header: Authorization
   expire: 14400
@@ -105,8 +101,7 @@ client:
   token-header: x-client-token
   expire: 14400
   rsa-secret: x2318^^(*WRYQWR(QW&T
-
 logging:
-    level:
-#        tk.mybatis: DEBUG
-        com.github.wxiaoqi.security.auth: DEBUG
+  level:
+    #        tk.mybatis: DEBUG
+    com.github.wxiaoqi.security.auth: DEBUG
