--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
             </dependency>
 
             <dependency>
+                <groupId>com.github.wxiaoqi</groupId>
+                <artifactId>ace-gate-ratelimit</artifactId>
+                <version>2.0-SNAPSHOT</version>
+            </dependency>
+
+
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
@@ -137,6 +144,11 @@
                 <groupId>io.zipkin.java</groupId>
                 <artifactId>zipkin-autoconfigure-ui</artifactId>
                 <version>${zipkin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.netflix.feign</groupId>
+                <artifactId>feign-jackson</artifactId>
+                <version>8.18.0</version>
             </dependency>
             <!--保存到数据库需要如下依赖-->
             <dependency>
